[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.124.0"
rand = "0.8.5"
find_folder = "0.3.0"

[dev-dependencies]
cucumber = "0.14.2"
futures = "0.3"

[[test]]
name = "acceptancetests"
harness = false  # allows Cucumber to print output instead of libtest